# Leetcode

./: 1.cpp  102.py  1092.py  1095.py  1111.py  1117.py  1248.py  128.py  130.py  1300.py  1431.py  151.py  155.py  199.py  202.py  206.py  21.py  210.py  221.py  236.py  25.py  258.py  287.py  289.py  3.py  300.py  33.py  355.py  365.py  394.py  42.py  445.py  45 C++quicker than Python.py  45.py  46.py  466.py  50.py  53.py  542.py  55.py  (+16 more)
python/: 10.py  1014.py  1090.py  11.py  1114.py  1115.py  1116.py  1160.py  1162.py  1195 theading.py  1226.py  124.py  125.py  126.py  136.py  1371.py  14.py  152.py  169.py  200.py  22.py  23.py  238.py  409.py  42.py  456.py  460.py  560.py  572.py  67.py  680.py  695.py  70.py  717.py  72.py  8.py  820.py  836.py  837.py  887.py  (+4 more)
python/leetcode/editor/cn/: [1036]逃离大迷宫.py  [1078]Bigram 分词.py  [1154]一年中的第几天.py  [1220]统计元音字母序列的数目.py  [1305]两棵二叉搜索树中的所有元素.py  [1345]跳跃游戏 IV.py  [1414]和为 K 的最少斐波那契数字数目.py  [143]重排链表.py  [1447]最简分数.py  [147]对链表进行插入排序.py  [15]三数之和.py  [1609]奇偶树.py  [1610]可见点的最大数目.py  [1614]括号的最大嵌套深度.py  [1615]最大网络秩.py  [1672]最富有客户的资产总量.py  [1688]比赛中的配对次数.py  [1705]吃苹果的最大数目.py  [1765]地图中的最高点.py  [1995]统计特殊四元组.py  [1996]游戏中弱角色的数量.py  [2013]检测正方形.py  [2029]石子游戏 IX.py  [2034]股票价格波动.py  [2045]到达目的地的第二短时间.py  [2047]句子中的有效单词数.py  [219]存在重复元素 II.py  [2223]构造字符串的总得分和.py  [229]求众数 II.py  [240]搜索二维矩阵 II.py  [29]两数相除.py  [306]累加数.py  [318]最大单词长度乘积.py  [334]递增的三元子序列.py  [335]路径交叉.py  [372]超级次方.py  [373]查找和最小的 K 对数字.py  [380]O(1) 时间插入、删除和获取随机元素.py  [385]迷你语法分析器.py  [388]文件的最长绝对路径.py  (+36 more)
python/leetcode/editor/cn/doc/: all-LAPTOP-9LHPO3LQ-2.json  all-LAPTOP-9LHPO3LQ.json  all.json  translation.json
python/leetcode/editor/cn/doc/content/: [1036]逃离大迷宫.md  [1078]Bigram 分词.md  [1154]一年中的第几天.md  [1220]统计元音字母序列的数目.md  [1305]两棵二叉搜索树中的所有元素.md  [1345]跳跃游戏 IV.md  [1414]和为 K 的最少斐波那契数字数目.md  [143]重排链表.md  [1447]最简分数.md  [147]对链表进行插入排序.md  [15]三数之和.md  [1609]奇偶树.md  [1610]可见点的最大数目.md  [1614]括号的最大嵌套深度.md  [1615]最大网络秩.md  [1672]最富有客户的资产总量.md  [1705]吃苹果的最大数目.md  [1765]地图中的最高点.md  [1995]统计特殊四元组.md  [1996]游戏中弱角色的数量.md  [2013]检测正方形.md  [2029]石子游戏 IX.md  [2034]股票价格波动.md  [2045]到达目的地的第二短时间.md  [2047]句子中的有效单词数.md  [219]存在重复元素 II.md  [2223]构造字符串的总得分和.md  [229]求众数 II.md  [240]搜索二维矩阵 II.md  [29]两数相除.md  [306]累加数.md  [318]最大单词长度乘积.md  [334]递增的三元子序列.md  [335]路径交叉.md  [372]超级次方.md  [373]查找和最小的 K 对数字.md  [380]O(1) 时间插入、删除和获取随机元素.md  [385]迷你语法分析器.md  [388]文件的最长绝对路径.md  [390]消除游戏.md  (+32 more)
python/竞赛/: 188.py
python/面试题/: _03_06.py  _16_03.py  _29.py  _40.py  _46.py
test/: temp.py
test/CMakeProject1/: .clang-format  CMakeLists.txt  CMakeSettings.json
test/CMakeProject1/includes/: CMakeProject1.h
test/CMakeProject1/src/: CMakeProject1.cpp
test/winTest/TestProject/: TestProject.cpp  TestProject.sln  TestProject.vcxproj  TestProject.vcxproj.filters
test/winTest/TestProject/x64/Debug/: TestProject.exe.recipe  TestProject.ilk  TestProject.vcxproj.FileListAbsolute.txt  testproject.obj.enc  vc142.idb
test/winTest/TestProject/x64/Debug/TestProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestProject.lastbuildstate  TestProject.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
test/winTest/test/: test.cpp  test.h  test.sln  test.vcxproj  v2x.cpp
test/winTest/test/Debug/: test.exe.recipe  test.ilk  test.obj-LAPTOP-9LHPO3LQ.enc  test.vcxproj.FileListAbsolute.txt  vc142.idb
test/winTest/test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate  test.write.1u.tlog
test/winTest/test/x64/Debug/: test.exe.recipe  test.ilk  test.obj.enc  test.vcxproj.FileListAbsolute.txt  vc142.idb
test/winTest/test/x64/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+2 more)
公司/Tecent/: 1.py
面试题/: _01_07.py  _08_11.py  _10_06.py  _13.py  _17_16.py  _51.py  _56.py  _62.py  _64.py
